                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


____________________________________________________________________
** CHANGES ALONG siesta@uam.es--2006/siesta-devel--reference--2.5
--------------------------------------------------------------------

2008-01-11  16:25:00 GMT  Alberto Garcia <albertog@icmab.es>	patch-11

Summary: Proper fix of cell management for zmatrix case. Enthalpy cosmetics

A recent previous patch (8) broke the unit cell handling in the zmatrix case.
It has been fixed.

The assorted "enthalpy" output has been rationalized,
reserving the use of the word "enthalpy" for the original case
of "target enthalpy".

(Fixed syntax error in std-test.mk)

2008-01-11  14:05:00 GMT  Alberto Garcia <albertog@icmab.es>	patch-10

Summary: Make diagonalization the default solution method regardless of size

Make diagonalization the default solution method regardless of system size.

2008-01-11  14:00:00 GMT  Alberto Garcia <albertog@icmab.es>	patch-9

Summary: Fix test.mk scripts

The std-test.mk script did not copy the output file to the main test directory.
The bsc-test.mk did not remove all the scratch files.

Fixed a typo in the input to the si2x1h test.

2008-01-11  13:55:00 GMT  Alberto Garcia <albertog@icmab.es>	patch-8

Summary: Fix for structural supercell construction

Due to the accidental mis-use of a module variable, the routine coor
did not generate the supercell correctly when a %supercell block was used.

Added and additional warning if such a block is used when the structure is
input in Zmatrix form.

2007-12-17  14:25:00 GMT  Alberto Garcia <albertog@icmab.es>	patch-7

Summary: Fix memory leak in dhscf

The array dvxcdn was allocated but never deallocated in dhscf. Actually,
it was never used in cellxc, so it has now been dimensioned trivially
to (1,1,1). The bug was introduced in the bsc-master-2.1 branch, at 
patch 27.
